src/test/deca/context/invalid/created/decl_var/double_declaration_mixte.deca
// Description :
//    test d'une déclaration de variable de type int déjà existante
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10:  La variable a est déjà déclarée.

{
int a;
float a; 
boolean a;
}